# icelandic-morphology-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/icelandic_mcp/: __init__.py  server.py
tests/: test_server.py
