[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icelandic-morphology-mcp"
version = "0.1.0"
description = "MCP server for Icelandic word inflection lookups using BinPackage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Miðeind ehf.", email = "mideind@mideind.is"}
]
keywords = ["icelandic", "morphology", "mcp", "nlp", "linguistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Icelandic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "islenska>=1.0.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mideind/icelandic-morphology-mcp"
Repository = "https://github.com/mideind/icelandic-morphology-mcp"

[project.scripts]
icelandic-morphology-mcp = "icelandic_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
